@@ -1,3 +1,8 @@
+2019-05-28 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoapCSV.m
+	Remove unused set.
+
 2018-07-23  Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap+Deleting.m
